--- a/Loging.html
+++ b/Loging.html
@@ -104,7 +104,7 @@
     <footer class ="final">
         <h5>Contáctenos!<br>
             Teléfono: 1234567890 <br>
-            Dirección: Calle x # xx-xxx <br>
+            Dirección: Calle x # xx-xx <br>
             e-mail: <br>
             Redes sociales: <br>
         </h5>
